Change Log / Release Notes
Riley Palumbo


CS 230 Lab 9
Main Features:
-created and implemented add-feed-picture.component.ts
-created add-feed-picture.component.css
-created and implemented add-feed-picture.component.html
-modified app.module.ts to include FormsModule and AddFeedPictureComponent
-modifed feed.service.ts- added method to send data to backend
-modified app-routing.module.ts to include routing for AddFeedPictureComponent


Bonus Features:
-created and implemented add-commtopic.component.ts
-created add-commtopic.component.css
-created and implemented add-commtopic.component.html
-modified app.module.ts to include AddCommtopicComponent
-modifed commtopic.service.ts- added method to send data to backend
-modified app-routing.module.ts to include routing for AddCommtopicComponent





CS 230 Lab 8
Main Features:
-deployed my website to the internet by installing Firebase
-modified angular.json to increase budgets->maximum error from 1mb to 2mb
-modified app.module.ts to add angular firebase module, angular firestore module, enviroment, and database
-modifed commtopic.service.ts -removed HttpClient dependency- added AngularFireBase as dependency
-modified feed.service.ts (bonus)
-added environment.prod.ts
-added environment.ts
-modified package.json
-modified package-lock.json
-added and modified firebase.json
-added firebase-hosting-merge.yml
-added firebase-hosting-pull-request.yml
-modified .gitignore
-added .firebaserc


Bonus Features:
-modifed a second service file, feed.service.ts, -removed HttpClient dependency- added AngularFireBase as dependency





*End of Chnage Log for Lab 8*




CS 230 Lab 7
Main Features:

-added to vsco realtime database on Firebase 
    -added feed branch and 4 entries (0,1,2,3)
-created and implemented feed.service.ts
-modified my-home-layout.component.ts 



Bonus Features:

-added to vsco realtime database on Firebase
    -added commtopics branch and 4 entries (0,1,2,3)
-created and implemented commtopic.service.ts