@@ -1,0 +1,33 @@
+import { Component, OnInit } from '@angular/core';
+import { NgForm } from '@angular/forms';
+import { AuthenticationService } from './authentication.service';
+
+@Component({
+  selector: 'vsco-authentication',
+  templateUrl: './authentication.component.html',
+  styleUrls: ['./authentication.component.css']
+})
+export class AuthenticationComponent implements OnInit {
+
+  constructor(private auth:AuthenticationService) { }
+
+  ngOnInit(): void {
+  }
+
+  onSubmit(data:NgForm){
+    console.log("Butoon clicked");
+    console.log(data.value);
+
+    this.auth.signup(data.value.email, data.value.password).subscribe(
+      data=>{
+        console.log(data);
+      },
+      error=>{
+        console.log(error);
+      }
+      
+    )
+    data.reset();
+  }
+
+}
